--- a/src/app/features/producto/producto/producto.component.html
+++ b/src/app/features/producto/producto/producto.component.html
@@ -1,2 +1,5 @@
  <h1>Total de productos: {{ productoService.total() }}</h1>
 
+<div class="bg-red-500 text-white p-4 rounded-lg">
+  Tailwind funciona 🎉
+</div>
