--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
-<app-carrito></app-carrito>
+<div class="relative z-50">
+  <app-menu></app-menu>
+</div>
+
+<div class="relative z-40">
+  <router-outlet></router-outlet>
+</div>
+
+<div class="relative z-30">
+  <app-carrito></app-carrito>
+</div>
